fixed bugs in swagger
