# docs/swagger.yaml
@@ -43,29 +43,19 @@ definitions:
     - Shipped
     - Delivered
     - OrderCanceled
+  model.OrderUpdateDTO:
+    properties:
+      order_status:
+        type: string
+      payment_status:
+        type: string
+    type: object
 info:
   contact: {}
   description: This is a Simple application for Orders
   title: Order Service API
   version: "1.0"
 paths:
-  /order:
-    get:
-      consumes:
-      - application/json
-      description: Get an array of Orders
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/model.Order'
-            type: array
-      summary: Get All Orders
-      tags:
-      - Order
   /order/:
     post:
       consumes:
@@ -88,7 +78,7 @@ paths:
       summary: Create Order
       tags:
       - Order
-  /order/{orderid}:
+  /order/{id}:
     get:
       consumes:
       - application/json
@@ -98,7 +88,7 @@ paths:
         in: path
         name: id
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -118,7 +108,13 @@ paths:
         in: path
         name: id
         required: true
-        type: integer
+        type: string
+      - description: Order update details
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/model.OrderUpdateDTO'
       produces:
       - application/json
       responses:
@@ -127,6 +123,23 @@ paths:
           schema:
             type: string
       summary: Update Order status by orderid
+      tags:
+      - Order
+  /orders:
+    get:
+      consumes:
+      - application/json
+      description: Get an array of Orders
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Order'
+            type: array
+      summary: Get All Orders
       tags:
       - Order
 swagger: "2.0"
